# lora-spectral-edit

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
analysis/: z_score_gate_summary.md
docs/: EVALUATION.md  core_idea_lora_spectral_edit.md
examples/: edit_metamath.sh
experiments/: README.md  configs_full.jsonl  configs_robust_z.jsonl  configs_trimmed_code_key1000.jsonl  run_smooth_abs_experiment.py  spectral_gate_humaneval_greedy.py
scripts/: collect_results.py  generate_robust_z_configs.py  generate_sweep_allmodes_6lora.py  generate_trimmed_code_key1000.py  launch_multi_gpu.sh  lora_diff.py  merge_robust_z_results.py  prefetch_adapters.py  recompute_z_score_gate_stats.py  run_one.sh  smoke_test.sh  summarize_z_score_stats.py
src/lora_spectral_edit/: __init__.py  __main__.py  cli.py  edit.py  eval_gsm8k.py  eval_humaneval.py  eval_profiles.py  hooks.py  io.py  smoke_test.py  svd.py
